Move href hashbang handling from html templates to entities
Fixes problem with displayItem links

--- a/src/components/editor/editableConstraint.html
+++ b/src/components/editor/editableConstraint.html
@@ -15,7 +15,7 @@
         <editable-label data-title="'Constraint classes'"></editable-label>
 
         <span ng-if="!ctrl.isEditing()" ng-repeat="item in ctrl.constraint.items">
-          <a ng-href="{{'#' + ctrl.linkItem(item)}}">{{item | translateLabel: ctrl.model}}</a>
+          <a ng-href="{{ctrl.linkItem(item)}}">{{item | translateLabel: ctrl.model}}</a>
           <span ng-if="!$last">&nbsp;{{ctrl.constraint.constraint}}&nbsp;</span>
         </span>
 
