--- a/src/components/editor/usage.html
+++ b/src/components/editor/usage.html
@@ -4,7 +4,7 @@
     <span>{{type | translate}}</span>
     <ul>
       <li ng-repeat="referrer in referrers track by referrer.id.value">
-        {{referrer | translateLabel: ctrl.context}} <span ng-hide="ctrl.showLinks()">({{referrer.id.compact}})</span><a ng-show="ctrl.showLinks()" ng-href="{{'#' + referrer.iowUrl()}}">({{referrer.id.compact}})</a>
+        {{referrer | translateLabel: ctrl.context}} <span ng-hide="ctrl.showLinks()">({{referrer.id.compact}})</span><a ng-show="ctrl.showLinks()" ng-href="{{referrer.iowUrl(true)}}">({{referrer.id.compact}})</a>
       </li>
     </ul>
   </li>
