--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -39,7 +39,7 @@
   <h4>{{ctrl.class.normalizedType + ' properties' | capitalize | translate}}</h4>
 
   <uib-accordion close-others="true">
-    <uib-accordion-group ng-repeat="property in ctrl.class.properties | orderBy: 'index' track by property.internalId.value" is-open="ctrl.propertyViews[property.internalId.uri].isOpen">
+    <uib-accordion-group ng-repeat="property in ctrl.class.properties track by property.internalId.value" is-open="ctrl.propertyViews[property.internalId.uri].isOpen">
       <uib-accordion-heading>
         <span ng-class="property.glyphIconClass"></span>
         <span>{{property | translateLabel: ctrl.model}}</span>
