Don't validate editorial note as string literal
Closes #403

--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -32,7 +32,7 @@
 <editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" context="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
 
 <editable data-title="Editorial note" context="ctrl.model">
-  <textarea id="editorialNote" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
+  <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
 </editable>
 
 <div ng-show="ctrl.class.properties.length > 0">
