--- a/src/components/editor/propertyView.html
+++ b/src/components/editor/propertyView.html
@@ -84,7 +84,7 @@
   </div>
 
   <editable data-title="Editorial note" context="ctrl.model">
-    <textarea id="editorialNote" class="form-control" localized-input context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
+    <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.property.editorialNote"></textarea>
   </editable>
 
   <h4 translate>Reusable predicate</h4>
