--- a/src/components/model/referencesView.html
+++ b/src/components/model/referencesView.html
@@ -8,7 +8,7 @@
       <span accordion-chevron is-open="ctrl.opened[reference.id]">{{reference | translateLabel: ctrl.model}}</span>
     </uib-accordion-heading>
     <div ng-if="ctrl.opened[reference.id]">
-      <button ng-show="modelViewController.canModify() && !reference.isLocal()" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
+      <button ng-show="modelViewController.canModify() && !reference.local" type="button" class="btn btn-default pull-right" ng-click="modelViewController.removeReference(reference)" translate>Delete reference</button>
       <non-editable data-title="Vocabulary id" value="reference.vocabularyId" context="ctrl.model"></non-editable>
     </div>
   </uib-accordion-group>
