Technical namespaces to its own panel

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -27,6 +27,7 @@
 <div class="col-md-5 col-md-offset-1">
   <references-view model="ctrl.model"></references-view>
   <requires-view model="ctrl.model"></requires-view>
+  <technical-namespaces model="ctrl.model"></technical-namespaces>
 
   <h4 translate>Additional information</h4>
   <usage-panel entity="ctrl.model"></usage-panel>
