Add buttons next to tables
Closes #406, closes #407, closes #408

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -27,7 +27,7 @@
 
 <div class="col-md-5 col-md-offset-1">
   <references-view model="ctrl.model"></references-view>
-  <requires-view model="ctrl.model"></requires-view>
+  <requires-view model="ctrl.model" model-controller="ctrl.modelController"></requires-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
   <relations-view model="ctrl.model"></relations-view>
 </div>
