--- a/src/components/editor/classView.html
+++ b/src/components/editor/classView.html
@@ -3,7 +3,10 @@
     <div ng-if="ctrl.class && ctrl.model">
       <selection-view model="ctrl.model" editable-controller="ctrl" show="ctrl.show">
         <selection-buttons>
-          <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()" translate>Add property</button>
+          <button type="button" class="btn btn-default right" ng-click="ctrl.addProperty()" ng-show="ctrl.isEditing()">
+            <span class="glyphicon glyphicon-plus"></span>
+            <span translate>Add property</span>
+          </button>
           <export ng-hide="ctrl.isEditing()" entity="ctrl.class"></export>
           <history model="ctrl.model" resource="ctrl.class" ng-hide="ctrl.isEditing()"></history>
         </selection-buttons>
