Make links sortable

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -62,6 +62,26 @@ table.editable-table {
         line-height: 0;
       }
     }
+
+    &.dragged.droppable {
+      border-color: black;
+
+      td {
+        border-color: black;
+      }
+    }
+
+    &.dragged {
+      border-collapse: separate;
+      color: $body-bg;
+      background-color: $body-bg;
+      border: 1px dashed $alert-warning-border;
+
+      td {
+        border-top: 1px dashed $alert-warning-border;
+        border-bottom: 1px dashed $alert-warning-border;
+      }
+    }
   }
 
   td.prefix, th.prefix {
