--- a/src/components/model/model.html
+++ b/src/components/model/model.html
@@ -11,7 +11,10 @@
             <i ng-class="tab.glyphIconClass"></i><p>{{tab.type | translate}}</p>
           </uib-tab-heading>
 
-          <button ng-if="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-new-button" ng-click="tab.addNew()">{{tab.addLabel | translate}}</button>
+          <button ng-if="ctrl.canEdit()" type="button" class="btn btn-default btn-md add-new-button" ng-click="tab.addNew()">
+            <span class="glyphicon glyphicon-plus"></span>
+            <span>{{tab.addLabel | translate}}</span>
+          </button>
 
           <ul class="panel__list" ng-class="{'has-button': ctrl.canEdit()}">
             <li ng-repeat="item in tab.items() track by item.id.value"
