--- a/src/components/common/searchResults.html
+++ b/src/components/common/searchResults.html
@@ -1,8 +1,7 @@
-<div ng-repeat="searchResult in ctrl.searchResults track by ctrl.trackingFn(searchResult)"
+<div ng-repeat="searchResult in ctrl.searchResults | filter : ctrl.isVisible track by ctrl.trackingFn(searchResult)"
      ng-class="['search-result', {selected: ctrl.isSelected(searchResult), disabled: searchResult.disabled, 'add-new': searchResult.isAddNew()}]"
      title="{{ctrl.title(searchResult)}}"
      ng-click="ctrl.selectItem(searchResult)"
-     ng-show="!searchResult.isAddNew() || searchResult.show()"
      key-control-selection>
 
   <div ng-show="searchResult.isAddNew()">
