Uri autocomplete implemented

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -48,6 +48,13 @@ $footer-height: 50px;
   cursor: move;
 }
 
+uri-input-autocomplete {
+  .dropdown-menu {
+    max-height: 400px;
+    overflow-y: scroll;
+  }
+}
+
 table.editable-table {
 
   tr {
