Adding, showing and removing of code schemes to implemented to UI

--- a/src/components/model/modelForm.html
+++ b/src/components/model/modelForm.html
@@ -30,4 +30,5 @@
   <requires-view model="ctrl.model" model-controller="ctrl.modelController"></requires-view>
   <technical-namespaces model="ctrl.model"></technical-namespaces>
   <relations-view model="ctrl.model"></relations-view>
+  <code-schemes-view model="ctrl.model"></code-schemes-view>
 </div>
