--- a/src/components/editor/classForm.html
+++ b/src/components/editor/classForm.html
@@ -29,7 +29,7 @@
   <state-select id="classState" state="ctrl.class.state" model="ctrl.model"></state-select>
 </editable>
 
-<editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" context="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
+<editable-subject-select references="ctrl.model.references" type="class" subject="ctrl.class.subject" model="ctrl.model" disable="!ctrl.inUnstableState"></editable-subject-select>
 
 <editable data-title="Editorial note" context="ctrl.model">
   <textarea id="editorialNote" class="form-control" localized-input="free" context="ctrl.model" ng-model="ctrl.class.editorialNote"></textarea>
