--- a/src/components/model/searchCodeSchemeModal.html
+++ b/src/components/model/searchCodeSchemeModal.html
@@ -11,9 +11,23 @@
                  key-control="ctrl.searchResults" />
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
+
+        <div class="search-filters">
+          <span class="title" translate>Filter results</span>
+          <div class="form-group">
+            <label for="group" translate>Group</label>
+            <div class="input-group input-group-md">
+              <select id="group" class="form-control" ng-model="ctrl.showGroup"
+                      ng-options="(codeGroup.title | translateValue: ctrl.localizer.context) for codeGroup in ctrl.codeGroups">
+                <option value="" translate>All groups</option>
+              </select>
+            </div>
+          </div>
+        </div>
+
       </div>
 
-      <div class="col-md-6 search-results with-button">
+      <div class="col-md-6 search-results">
         <ajax-loading-indicator ng-if="ctrl.loadingResults"></ajax-loading-indicator>
 
         <search-results ng-if="!ctrl.loadingResults" items="ctrl.searchResults" exclude="ctrl.exclude" on-select="ctrl.selectItem(item)">
