--- a/src/components/model/searchRequireModal.html
+++ b/src/components/model/searchRequireModal.html
@@ -19,8 +19,13 @@
           <i class="glyphicon glyphicon-search form-control-feedback"></i>
         </div>
 
-        <div class="checkbox">
-          <label><input type="checkbox" ng-model="ctrl.showTechnical">{{'Show technical namespaces' | translate}}</label>
+        <div class="search-filters">
+          <span class="title" translate>Filter results</span>
+          <div class="form-group">
+            <div class="checkbox">
+              <label><input type="checkbox" ng-model="ctrl.showTechnical">{{'Show technical namespaces' | translate}}</label>
+            </div>
+          </div>
         </div>
       </div>
 
