--- a/src/components/model/searchCodeSchemeModal.html
+++ b/src/components/model/searchCodeSchemeModal.html
@@ -4,6 +4,7 @@
   <modal-body>
     <div class="row">
       <div class="col-md-6">
+
         <div class="input-group input-group-lg">
           <input autofocus type="text" class="form-control" placeholder="{{'search code scheme' | translate}}"
                  ng-model="ctrl.searchText"
@@ -14,6 +15,18 @@
 
         <div class="search-filters">
           <span class="title" translate>Filter results</span>
+
+          <div class="form-group">
+            <label for="server" translate>Code server</label>
+            <div class="input-group input-group-md">
+              <select id="server" class="form-control" ng-model="ctrl.showServer"
+                      ng-options="(codeServer.title | translateValue: ctrl.localizer.context) for codeServer in ctrl.codeServers">
+                <option value="" translate>All servers</option>
+              </select>
+              <span ng-show="ctrl.showServer.description | translateValue: ctrl.localizer.context">{{ctrl.showServer.description | translateValue: ctrl.localizer.context}}</span>
+            </div>
+          </div>
+
           <div class="form-group">
             <label for="group" translate>Group</label>
             <div class="input-group input-group-md">
