Change button type to make UI less busy

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -197,6 +197,10 @@ table.editable-table {
   border: 1px solid $brand-accent-light;
 }
 
+.btn-link {
+  color: $brand-primary;
+}
+
 .multi-input {
   border: 1px solid #ccc;
   height: auto !important;
